--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="Shubhkirti Sharma">
-    <meta name="description" content="web portfolio - Shubhkirti Sharma">
-    <meta name="keywords" content="Shubhkirti, Sharma, front-end, designer,front, end">
+    <meta name="author" content="John Doe">
+    <meta name="description" content="web portfolio - John Doe">
+    <meta name="keywords" content="John, Doe, front-end, designer,front, end">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Shubhkirti Sharma | Digital Designer &amp; Front End Developer</title>
-    <link rel="canonical" href="www.shubhkirtisharma.com">
+    <title>John Doe | Something like Digital Designer and shit...</title>
     <!--Stylesheets-->
     <link href="css/styles.css" rel="stylesheet" media="all">
     <link href="css/normalize.css" rel="stylesheet" media="all">
@@ -94,7 +93,7 @@
             <div class="__short_intro">
               <span class="__mark_lt">Bello.</span>
               <br>
-              I am Shubhkirti Sharma. A freelance <span>digital designer</span>.
+              I am John Doe. A freelance <span>digital designer</span>.
               <br>
               I help small teams develop a strong web presence. I mostly work with HTML and CSS with pinch of jQuery and sometimes using Bootstrap Framework if necessary.
               <br>
@@ -111,7 +110,7 @@
             <div class="__long_intro">
               <span class="__mark_lt">Hey There!</span>
               <br>
-              I am Shubhkirti Sharma. A nineteen year young digital designer currently in Chandigarh. I was born and brought up in New Delhi, India.
+              I am John Doe. A nineteen year young digital designer currently in Chandigarh. I was born and brought up in New Delhi, India.
               <br>
               The thoughts of becoming a digital designer started revolving around my mind when I was 10<sup>th</sup> grade and since then I started indulging myself into various coding activities. I started learning C &amp; C++ at that time, but soon started to focus on HTML and CSS.<br>
               Most of the time, I used to get inspirations from various Digital Agencies and Designers around the globe some of them being <span><a href="http://ueno.co/">Ueno</a></span>, <span><a href="#">Tobias Van Schneider</a></span> and <span><a href="#">Hello Monday</a></span>.
