--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="marker-top">
         <div class="hero">
           <div class="marker title">
-            <span class="underline">Shubhkirti</span>
+            <span class="underline">John Doe</span>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
             
             <span class="__mark_">Front End Developer</span><br>
             
-            <span class="__mark_">New Delhi, India</span>
+            <span class="__mark_">Country, World</span>
           </div>
         </div>
       </div>
@@ -110,17 +110,8 @@
             <div class="__long_intro">
               <span class="__mark_lt">Hey There!</span>
               <br>
-              I am John Doe. A nineteen year young digital designer currently in Chandigarh. I was born and brought up in New Delhi, India.
+              I am John Doe.
               <br>
-              The thoughts of becoming a digital designer started revolving around my mind when I was 10<sup>th</sup> grade and since then I started indulging myself into various coding activities. I started learning C &amp; C++ at that time, but soon started to focus on HTML and CSS.<br>
-              Most of the time, I used to get inspirations from various Digital Agencies and Designers around the globe some of them being <span><a href="http://ueno.co/">Ueno</a></span>, <span><a href="#">Tobias Van Schneider</a></span> and <span><a href="#">Hello Monday</a></span>.
-              I never thought jQuery and Javascript are so necessary for Web Designing and Development untill in 11<sup>th</sup> when I did realize. BANG! It struck my head.<br>
-              While I was in class 11<sup>th</sup>, I also learned making music on FL Studio and tried to create some shitty tracks, but just so if you are like interested, you can listen to them on my <span><a href="#">Soundcloud</a></span>. (I am still warning you. They are shit.)<br>
-              In 2015, I graduated high school and thought to give IIT a try, so I dropped an year and went Kota, Rajasthan to prepare for it. Unfortunately, I didn't make it, but I still wanted to do Computer Science Engineering and so I went forward to join UIET, Panjab University.
-              <br><br>
-              Since the past year in Chandigarh, I have made a couple of great friends and not to forget, this city is amazing.
-              <br>
-              Along with this I extremely love listening to music mostly Trance, Coldplay and Illenium with some mixes including 90s Hit and &lt;coding&gt; any shit. I also play football in free time.<br>
               I have been looking for opportunities to grab till that time I am working on small projects. If
               you have something in mind, we can surely discuss over a  cup of <i class="fa fa-coffee"></i>. I love meeting new people.
               <br>
